# finance-backend

./: .env.template  Makefile  alembic.ini  generate_structure.py  logging.ini  pyproject.toml  structure.md
alembic/: env.py
src/: config.py  database.py  main.py
src/auth/: permissions.py  routes.py  schema.py  service.py
src/bank/: enums.py  models.py  repository.py  routes.py  schema.py  service.py
src/category/: models.py
src/scraper/: base_scraper.py  santander_scraper.py
src/transaction/: enums.py  models.py  repository.py  routes.py  schema.py  service.py
src/user/: models.py  repository.py  routes.py  schema.py  service.py
src/utils/: security.py
versions/: 387475aafab5_add_foreign_key_to_banks.py  5a4d078c696b_add_transactions_table.py  b4349d81faf6_base_tables.py
